ingress/cannary/blue/blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blue-deploy
  name: blue-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-deploy
  strategy: {}
  template:
    metadata:
      labels:
        app: blue-deploy
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
