ingress/cannary/blue/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue-svc
  name: blue-svc
spec:
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: blue-deploy
  type: ClusterIP
status:
  loadBalancer: {}
