ingress/cannary/blue/blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - backend:
          service:
            name: blue-svc
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
